tests/baselines/reference/importTag10.errors.txt
/foo.js(2,11): error TS1109: Expression expected.


==== /foo.js (1 errors) ====
    /**
     * @import
              
     */
    
!!! error TS1109: Expression expected.
    